--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ base64 = "0.22"
 mockito = "1.2"
 tokio-test = "0.4"
 tempfile = "3.8"
+serial_test = "3.0"
 
 [profile.release]
 opt-level = "z"   # Optimize for size.
